[tool.poetry]
name = "captainhook"
version = "0.1.0"
description = ""
authors = ["maikroservice <20245897+maikroservice@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.0.0"
python-dotenv = "^0.21.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
